[gd_scene load_steps=4 format=3 uid="uid://csgnc74r80msm"]

[ext_resource type="Script" path="res://addons/pathways/ui/PathwayPiecePreview.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://crmuq62guq3pt" path="res://addons/pathways/icons/piece_orientation_arrow.png" id="2_rehvl"]

[sub_resource type="ViewportTexture" id="2"]
viewport_path = NodePath("SubViewport")

[node name="PathwayPiecePreview" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 400)
render_target_update_mode = 3

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
projection = 1
current = true
size = 4.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport"]

[node name="PreviewTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2
texture = SubResource("2")
expand_mode = 1
stretch_mode = 6
flip_v = true

[node name="HandleLayer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="RefCounted" type="Control" parent="HandleLayer"]
layout_mode = 2

[node name="OrientationArrow" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Make sure that the positive direction of the mesh aligns with the arrow."
texture = ExtResource("2_rehvl")
stretch_mode = 4

[node name="ZoomBar" type="VScrollBar" parent="."]
layout_mode = 2
size_flags_horizontal = 8
min_value = 0.2
max_value = 10.0
step = 0.1
value = 4.0

[node name="Label" type="Label" parent="ZoomBar"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = -20.0
offset_bottom = 14.0
grow_horizontal = 0
text = "4.0"
horizontal_alignment = 2
